--- a/First.html
+++ b/First.html
@@ -5,8 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First HTML File</title>
+    <style>
+
+    </style>
 </head>
 <body>
     <header>Hello World!</header>
+    <main>
+        <h1>Welcome!</h1>
+        <p>It's me, Jamie!</p>
+        <img src="IMG_8174.jpg" alt="Me" style="width:300px;height:400px;">
+    </main>
 </body>
 </html>
